--- a/public/index.html
+++ b/public/index.html
@@ -946,7 +946,8 @@
         </div>
     </div>
 </body>
-</html><!DOCTYPE html>
+</html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1894,4 +1895,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
