--- a/public/index.html
+++ b/public/index.html
@@ -631,7 +631,100 @@
             border-radius: 12px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+/* audit trail */
+        .audit-table-container {
+    overflow-x: auto;
+    margin: 1rem 0;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
 
+.audit-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: white;
+    font-size: 0.9rem;
+}
+
+.audit-table th,
+.audit-table td {
+    padding: 12px 8px;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+}
+
+.audit-table th {
+    background: #f8f9fa;
+    font-weight: 600;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.audit-table tr:hover {
+    background: #f8f9fa;
+}
+
+.timestamp-cell {
+    min-width: 140px;
+    font-size: 0.85em;
+}
+
+.user-cell .user-name {
+    font-weight: 500;
+}
+
+.user-cell .user-id {
+    display: block;
+    color: #666;
+    font-size: 0.75em;
+}
+
+.action-badge {
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 0.8em;
+    font-weight: 500;
+}
+
+.status-success { background: #d4edda; color: #155724; }
+.status-error { background: #f8d7da; color: #721c24; }
+.status-warning { background: #fff3cd; color: #856404; }
+.status-info { background: #d1ecf1; color: #0c5460; }
+.status-normal { background: #e2e3e5; color: #383d41; }
+
+.details-cell {
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.blockchain-verified {
+    color: #28a745;
+    font-size: 1.2em;
+}
+
+.audit-controls {
+    margin-bottom: 1rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.audit-stats {
+    margin-top: 1rem;
+    padding: 1rem;
+    background: #f8f9fa;
+    border-radius: 4px;
+}
+
+.stats-row {
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
         /* Modal */
         .modal {
             position: fixed;
@@ -771,6 +864,9 @@
 
         .status-online { color: #10b981; }
         .status-offline { color: #ef4444; }
+
+
+
     </style>
 </head>
 <body>
