--- a/public/index.html
+++ b/public/index.html
@@ -965,12 +965,11 @@
                     <li>MetaMask integration for secure transactions</li>
                     <li>Role-based access control system</li>
                     <li>Comprehensive audit trail</li>
-                    <li>Duplicate detection and prevention</li>
                     <li>Excel export functionality for reports</li>
                 </ul>
 
                 <h3 style="margin-top: 2rem;">How It Works:</h3>
-                <p>Students upload assignments through our secure interface. Each file is hashed using SHA-256 and stored on the blockchain, creating an immutable record. Lecturers can verify submissions by comparing blockchain hashes, ensuring authenticity and preventing plagiarism.</p>
+                <p>Students upload assignments through our secure interface. Each file is hashed using SHA-256 and stored on the blockchain, creating an immutable record. Lecturers can verify submissions by comparing blockchain hashes and ensuring authenticity.</p>
             </div>
         </div>
     </div>
@@ -998,7 +997,7 @@
                 
                 <div style="margin-top: 2rem; text-align: center;">
                     <p><strong>Support Email:</strong> support@educhain.com</p>
-                    <p><strong>Phone:</strong> +1 (555) 123-4567</p>
+                    <p><strong>Phone:</strong> +2348160737105</p>
                     <p><strong>Office Hours:</strong> Monday - Friday, 9:00 AM - 6:00 PM</p>
                 </div>
             </div>
